@@ -56,27 +56,27 @@
 struct ec_device;
 typedef struct ec_device ec_device_t; /**< \see ec_device */
 
-/**
-   Device poll function type.
-*/
-
+/** Device poll function type.
+ */
 typedef void (*ec_pollfunc_t)(struct net_device *);
 
-/*****************************************************************************/
-// Offering/withdrawal functions
+/******************************************************************************
+ * Offering/withdrawal functions
+ *****************************************************************************/
 
-int ecdev_offer(struct net_device *net_dev, ec_pollfunc_t poll,
-        struct module *module, ec_device_t **);
+ec_device_t *ecdev_offer(struct net_device *net_dev, ec_pollfunc_t poll,
+        struct module *module);
 void ecdev_withdraw(ec_device_t *device);
 
-/*****************************************************************************/
-// Device methods
+/******************************************************************************
+ * Device methods
+ *****************************************************************************/
 
 int ecdev_open(ec_device_t *device);
 void ecdev_close(ec_device_t *device);
 void ecdev_receive(ec_device_t *device, const void *data, size_t size);
 void ecdev_set_link(ec_device_t *device, uint8_t state);
-uint8_t ecdev_get_link(ec_device_t *device);
+uint8_t ecdev_get_link(const ec_device_t *device);
 
 /*****************************************************************************/
 
